etc/tests/error/parser/function-missing-body-newline.ny
;; expect: expected function body
use core

fn main()
main()
